--- a/frontend/src/components/Home/TaskTable.css
+++ b/frontend/src/components/Home/TaskTable.css
@@ -8,7 +8,7 @@
 .react-tabs {
   display: flex;
   margin: auto;
-  width: 90vw;
+  width: max-content;
   height: max-content;
   border: 1px solid #3c3e43;
   
