--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.dark-theme {
+  background: url('./images/darkbg.png');
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #343a40 !important;
+  background-size: cover;
+  background-attachment: fixed;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.light-theme {
+  background: url('./images/lightbg.png');
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #dddddd!important;
+  color: black;
 }
