--- a/frontend/src/components/NavBar/AppNavBar.css
+++ b/frontend/src/components/NavBar/AppNavBar.css
@@ -1,7 +1,7 @@
 .navLinkText {
   color: white;
 }
-
+}
 .navLinkText:hover {
   color: rgb(196, 196, 196);
 }
@@ -14,6 +14,10 @@
 }
 .linkTextDiv {
   padding: 5px;
+}
+.linkTextDiv:hover {
+  color: rgb(196, 196, 196);
+
 }
 .brandLink:hover {
   cursor: pointer;
