--- a/frontend/src/components/NavBar/AppNavBar.css
+++ b/frontend/src/components/NavBar/AppNavBar.css
@@ -1,10 +1,3 @@
-.navLinkText {
-  color: white;
-}
-.navLinkText:hover {
-  color: rgb(196, 196, 196);
-}
-
 .icon {
   position: relative;
   top: -1.5px;
@@ -20,4 +13,10 @@
 }
 .brandLink:hover {
   cursor: pointer;
+}
+
+.dropdownIcon {
+  position: relative;
+  top: 11px;
+  margin-right: -4px;
 }
