many changes to nav bar

--- a/frontend/src/components/NavBar/AppNavBar.css
+++ b/frontend/src/components/NavBar/AppNavBar.css
@@ -7,6 +7,34 @@
 .linkTextDiv {
   padding: 5px;
 }
+
+.icon-style {
+  background-color: transparent !important;
+  box-shadow: none !important;
+  color: white;
+}
+
+.icon-style:hover {
+  background-color: transparent !important;
+  /* color: rgb(196, 196, 196); */
+}
+
+.manage-icon {
+  padding-left: 6px !important;
+  text-transform: capitalize !important;
+  font-size: 14px !important;
+  color: #bbbbbb !important;
+}
+
+.manage-list {
+  margin-left: -180px !important;
+  margin-top: -30px !important;
+}
+
+.dropdown-toggle::after {
+  display: none !important; 
+}
+
 .linkTextDiv:hover {
   color: rgb(196, 196, 196);
 
