--- a/frontend/src/components/NavBar/AppNavBar.css
+++ b/frontend/src/components/NavBar/AppNavBar.css
@@ -31,6 +31,21 @@
   margin-top: -30px !important;
 }
 
+.bi-list {
+  margin-top: -3px;
+}
+
+.notification-badge {
+  background-color: red;
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  border-radius: 50%;
+  z-index: 10;
+  margin-left: 15%;
+  margin-top: -7px;
+}
+
 .dropdown-toggle::after {
   display: none !important; 
 }
