--- a/frontend/src/components/Details/Map.css
+++ b/frontend/src/components/Details/Map.css
@@ -20,11 +20,12 @@
 
 .reset-btn{
   width: 160px !important;
-  height: 40px;
+  height: 50px;
   border-radius: 5px;
-  background-color: #015555;
-  color: white;
+  /* background-color: #015555; */
+  /* color: white; */
   z-index: 2;
+  margin-bottom: 10px;
 }
 
 
