--- a/frontend/src/components/Manage/ManageTasks/ManageTasks.css
+++ b/frontend/src/components/Manage/ManageTasks/ManageTasks.css
@@ -145,9 +145,9 @@
   font-weight: bolder;
 }
 
-.pendingTask {
-  color: yellow;
-}
+/* .pendingTask {
+  color: slate;
+} */
 
 .incompleteTask {
   color: red;
