--- a/frontend/src/components/NavBar/AppNavBar.css
+++ b/frontend/src/components/NavBar/AppNavBar.css
@@ -68,3 +68,12 @@
   background-color: rgb(66, 165, 211);
   height: 5px;
 }
+
+.borderSpan1 {
+  background-color: rgb(66, 165, 211);
+  height: 3px;
+}
+.borderSpan2 {
+  background-color: whitesmoke;
+  height: 3px;
+}
