--- a/frontend/src/components/Manage/CreateTask/CreateTask.css
+++ b/frontend/src/components/Manage/CreateTask/CreateTask.css
@@ -62,8 +62,8 @@ button.create-table-show.btn.btn-dark{
 }
 
 
-#dropdownScrollBar{
+.dropdownScrollBar {
     height: auto;
-    max-height: 100px;
+    max-height: 300px;
     overflow-y: auto;
 }
