updated home task table styling

--- a/frontend/src/components/Manage/ManageTasks/ManageTasks.css
+++ b/frontend/src/components/Manage/ManageTasks/ManageTasks.css
@@ -15,7 +15,7 @@
 }
 
 .task:hover {
-  background-color: rgba(109, 109, 109, 0.5);
+  background-color: rgb(66, 165, 211, .3);
 }
 
 .pageNumArea {
